--- a/Dnd.Exaltado.Web/Views/Monsters/Index.cshtml
+++ b/Dnd.Exaltado.Web/Views/Monsters/Index.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = " - Monsters";
 }
 
-<div class="card card-outline card-primary">
+<div class="card card-outline card-primary"  style="top:1vh;">
     <div class="card-header">
         <h3 class="card-title">Search Monsters</h3>
     </div>
@@ -10,6 +10,11 @@
     <form role="form">
         <div class="card-body">
             <div class="form-group">
+
+                <div id="partial-Monsters">
+
+                </div>
+
             </div>
         </div>
 
@@ -19,12 +24,6 @@
         </div>
     </form>
 </div>
-
-<div id="partial-Monsters">
-
-</div>
-
-
 
 @section Scripts{
     <script src="~/js/Monsters.js"></script>
