--- a/Dnd.Exaltado.Web/Views/Players/Index.cshtml
+++ b/Dnd.Exaltado.Web/Views/Players/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = " - Players";
 }
-<div class="card card-outline card-primary">
+<div class="card card-outline card-primary"  style="top:1vh;">
     <div class="card-header">
         <h3 class="card-title">Search Players</h3>
     </div>
@@ -9,6 +9,11 @@
     <form role="form">
         <div class="card-body">
             <div class="form-group">
+
+                <div id="partial-Players">
+
+                </div>
+
             </div>
         </div>
 
@@ -18,11 +23,6 @@
         </div>
     </form>
 </div>
-
-<div id="partial-Players">
-
-</div>
-
 
 
 @section Scripts{
