--- a/Dnd.Exaltado.Web/Views/Shared/_Footer.cshtml
+++ b/Dnd.Exaltado.Web/Views/Shared/_Footer.cshtml
@@ -1,8 +1,8 @@
 ﻿<!-- Main Footer -->
-<footer class="main-footer">
+<footer class="main-footer" style="max-height:5vh;">
     <!-- To the right -->
     <div class="float-right d-none d-sm-inline">
-        <b>Version</b> 0.0.0
+        <b>Version</b> 0.0.1
     </div>
     <!-- Default to the left -->
     Copyright <strong>@DateTime.Now.Year</a>.</strong>
