--- a/Dnd.Exaltado.Web/Views/Shared/_Header.cshtml
+++ b/Dnd.Exaltado.Web/Views/Shared/_Header.cshtml
@@ -1,4 +1,4 @@
-﻿<nav class="main-header navbar navbar-expand navbar-white navbar-light">
+﻿<nav class="main-header navbar navbar-expand navbar-white navbar-light" style="max-height:5vh;">
 
     <ul class="navbar-nav">
         <li class="nav-item">
